Bugfix and add datasource management

--- a/src/global.less
+++ b/src/global.less
@@ -3,23 +3,23 @@
   font-weight: 300;
   font-family: 'Poppins';
   font-style: normal;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDz8Z11lFc-K.woff2)
-    format('woff2');
+  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDz8Z11lFc-K.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC,
-    U+A830-A839, U+A8E0-A8FB;
+  U+A830-A839, U+A8E0-A8FB;
 }
+
 /* latin-ext */
 @font-face {
   font-weight: 300;
   font-family: 'Poppins';
   font-style: normal;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDz8Z1JlFc-K.woff2)
-    format('woff2');
+  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDz8Z1JlFc-K.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
-    U+2C60-2C7F, U+A720-A7FF;
+  U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
   font-weight: 300;
@@ -28,8 +28,9 @@
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDz8Z1xlFQ.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
-    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 /* devanagari */
 @font-face {
   font-weight: 400;
@@ -38,8 +39,9 @@
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC,
-    U+A830-A839, U+A8E0-A8FB;
+  U+A830-A839, U+A8E0-A8FB;
 }
+
 /* latin-ext */
 @font-face {
   font-weight: 400;
@@ -48,8 +50,9 @@
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJnecmNE.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
-    U+2C60-2C7F, U+A720-A7FF;
+  U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
   font-weight: 400;
@@ -58,30 +61,31 @@
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJfecg.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
-    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 /* devanagari */
 @font-face {
   font-weight: 500;
   font-family: 'Poppins';
   font-style: normal;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLGT9Z11lFc-K.woff2)
-    format('woff2');
+  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLGT9Z11lFc-K.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC,
-    U+A830-A839, U+A8E0-A8FB;
+  U+A830-A839, U+A8E0-A8FB;
 }
+
 /* latin-ext */
 @font-face {
   font-weight: 500;
   font-family: 'Poppins';
   font-style: normal;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLGT9Z1JlFc-K.woff2)
-    format('woff2');
+  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLGT9Z1JlFc-K.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
-    U+2C60-2C7F, U+A720-A7FF;
+  U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
   font-weight: 500;
@@ -90,30 +94,31 @@
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLGT9Z1xlFQ.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
-    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 /* devanagari */
 @font-face {
   font-weight: 600;
   font-family: 'Poppins';
   font-style: normal;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z11lFc-K.woff2)
-    format('woff2');
+  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z11lFc-K.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC,
-    U+A830-A839, U+A8E0-A8FB;
+  U+A830-A839, U+A8E0-A8FB;
 }
+
 /* latin-ext */
 @font-face {
   font-weight: 600;
   font-family: 'Poppins';
   font-style: normal;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z1JlFc-K.woff2)
-    format('woff2');
+  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z1JlFc-K.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
-    U+2C60-2C7F, U+A720-A7FF;
+  U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
   font-weight: 600;
@@ -122,30 +127,31 @@
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z1xlFQ.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
-    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
 /* devanagari */
 @font-face {
   font-weight: 700;
   font-family: 'Poppins';
   font-style: normal;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z11lFc-K.woff2)
-    format('woff2');
+  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z11lFc-K.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC,
-    U+A830-A839, U+A8E0-A8FB;
+  U+A830-A839, U+A8E0-A8FB;
 }
+
 /* latin-ext */
 @font-face {
   font-weight: 700;
   font-family: 'Poppins';
   font-style: normal;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z1JlFc-K.woff2)
-    format('woff2');
+  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z1JlFc-K.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
-    U+2C60-2C7F, U+A720-A7FF;
+  U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
   font-weight: 700;
@@ -154,7 +160,7 @@
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z1xlFQ.woff2) format('woff2');
   font-display: swap;
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
-    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 html,
@@ -171,6 +177,7 @@ body,
 .ant-layout {
   min-height: 100vh;
 }
+
 .ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
   left: unset;
 }
@@ -188,17 +195,20 @@ body {
 
   a,
   .ant-btn-link {
-    color: #FF2606;
+    color: #36cfc9;
   }
+
   a:hover,
   .ant-btn-link:hover {
-    color: #ffa39e;
+    color: #08979c;
   }
+
   .ant-pro-card *,
   .ant-pro-form *,
   .ant-picker-dropdown {
     font-family: 'Poppins', sans-serif;
   }
+
   *[class^='ant-layout'],
   *[class*=' ant-layout'],
   *[class^='ant-modal'],
@@ -234,10 +244,10 @@ body {
 
   // Side Style====
   .ant-menu-light .ant-menu-item:hover:not(.ant-menu-item-selected):not(.ant-menu-submenu-selected),
-  .ant-menu-light
-    .ant-menu-submenu-title:hover:not(.ant-menu-item-selected):not(.ant-menu-submenu-selected) {
+  .ant-menu-light .ant-menu-submenu-title:hover:not(.ant-menu-item-selected):not(.ant-menu-submenu-selected) {
     color: inherit;
   }
+
   .ant-pro .ant-pro-layout .ant-pro-sider .ant-layout-sider-children {
     padding-block: 8px;
   }
@@ -257,80 +267,64 @@ body {
       font-size: 15px;
     }
   }
-  .ant-pro-top-nav-header-menu .ant-menu-item {
+
+  .ant-pro-top-nav-header-menu .ant-menu-item,
+  .ant-pro-top-nav-header-menu .ant-menu-submenu{
     .ant-pro-base-menu-horizontal-item-icon {
       width: 16px;
       height: 16px;
       line-height: 16px;
       opacity: 0.85;
     }
+
     .ant-pro-base-menu-horizontal-item-text {
       font-size: 16px;
     }
   }
+
   .ant-pro-top-nav-header-menu .ant-menu-item-active .ant-pro-base-menu-horizontal-item-text,
   .ant-pro-top-nav-header-menu .ant-menu-item-selected .ant-pro-base-menu-horizontal-item-text {
     font-weight: 600;
   }
+
   // Table Style====
-  .ant-table-wrapper
-    .ant-table-thead
-    > tr
-    > th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not(
+  .ant-table-wrapper .ant-table-thead > tr > th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not(
       [colspan]
     )::before {
     display: none;
   }
+
   .ant-table-wrapper .ant-table {
     color: #495057;
   }
+
   .ant-table-wrapper .ant-table-thead > tr > th {
     color: #495057;
     background: #eff2f7;
     border-bottom: 0;
   }
+
   .ant-table-wrapper .ant-table-container table > thead > tr:first-child th:first-child,
   .ant-table-wrapper .ant-table-container table > thead > tr:first-child th:last-child {
     border-radius: 0;
   }
+
   .ant-table-wrapper .ant-table.ant-table-middle .ant-table-thead > tr > th,
   .ant-table-wrapper .ant-table.ant-table-middle .ant-table-tbody > tr > td,
   .ant-table-wrapper .ant-table.ant-table-middle .ant-table-tfoot > tr > th,
   .ant-table-wrapper .ant-table.ant-table-middle .ant-table-tfoot > tr > td {
     padding: 0.75rem 0.75rem;
   }
-  .ant-table-wrapper
-    .ant-table:not(.ant-table-bordered)
-    .ant-table-tbody
-    > tr.ant-table-row:hover
-    > td:first-child,
-  .ant-table-wrapper
-    .ant-table:not(.ant-table-bordered)
-    .ant-table-tbody
-    > tr
-    > td.ant-table-cell-row-hover:first-child,
-  .ant-table-wrapper
-    .ant-table:not(.ant-table-bordered)
-    .ant-table-tbody
-    > tr.ant-table-row.ant-table-row-selected
-    > td:first-child,
-  .ant-table-wrapper
-    .ant-table:not(.ant-table-bordered)
-    .ant-table-tbody
-    > tr.ant-table-row:hover
-    > td:last-child,
-  .ant-table-wrapper
-    .ant-table:not(.ant-table-bordered)
-    .ant-table-tbody
-    > tr
-    > td.ant-table-cell-row-hover:last-child,
-  .ant-table-wrapper
-    .ant-table:not(.ant-table-bordered)
-    .ant-table-tbody
-    > tr.ant-table-row.ant-table-row-selected
-    > td:last-child {
+
+  .ant-table-wrapper .ant-table:not(.ant-table-bordered) .ant-table-tbody > tr.ant-table-row:hover > td:first-child,
+  .ant-table-wrapper .ant-table:not(.ant-table-bordered) .ant-table-tbody > tr > td.ant-table-cell-row-hover:first-child,
+  .ant-table-wrapper .ant-table:not(.ant-table-bordered) .ant-table-tbody > tr.ant-table-row.ant-table-row-selected > td:first-child,
+  .ant-table-wrapper .ant-table:not(.ant-table-bordered) .ant-table-tbody > tr.ant-table-row:hover > td:last-child,
+  .ant-table-wrapper .ant-table:not(.ant-table-bordered) .ant-table-tbody > tr > td.ant-table-cell-row-hover:last-child,
+  .ant-table-wrapper .ant-table:not(.ant-table-bordered) .ant-table-tbody > tr.ant-table-row.ant-table-row-selected > td:last-child {
     border-radius: 0;
   }
+
   .ant-table-wrapper .ant-table-tbody > tr > td {
     border-top-color: #eff2f7;
   }
@@ -348,7 +342,7 @@ body {
     .ant-btn-compact-item:not(.ant-btn-compact-last-item).ant-btn-compact-first-item.ant-btn-lg {
       border-top-left-radius: 24px;
       border-bottom-left-radius: 24px;
-      border-start-end-radius: 0px;
+      border-start-end-radius: 0;
       border-end-end-radius: 0;
       padding-inline-start: 12px;
     }
@@ -377,17 +371,17 @@ body {
     .ant-input-group .ant-input-group-addon:first-child {
       border-bottom-left-radius: 0;
     }
+
     .ant-input-group > .ant-input:last-child,
     .ant-input-group .ant-input-group-addon:last-child {
       border-bottom-right-radius: 0;
       inset-inline-start: 0;
     }
-    .ant-input-search
-      > .ant-input-group
-      > .ant-input-group-addon:last-child
-      .ant-input-search-button {
+
+    .ant-input-search > .ant-input-group > .ant-input-group-addon:last-child .ant-input-search-button {
       border-bottom-right-radius: 0;
     }
+
     .site-tree-search-value {
       color: #f50;
     }
@@ -396,6 +390,7 @@ body {
   .custom-upload {
     width: 100%;
     text-align: center;
+
     .ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload.ant-upload-select {
       border-radius: 50%;
     }
@@ -412,6 +407,7 @@ body {
       width: 400px;
     }
   }
+
   .custom-description-label-width-fixed-300 {
     .ant-descriptions-view .ant-descriptions-row th.ant-descriptions-item-label {
       width: 300px;
@@ -423,9 +419,11 @@ body {
   .ant-drawer {
     .ant-pro-query-filter {
       padding: 24px;
+
       .ant-form-item {
         margin-block: 0;
       }
+
       .ant-pro-query-filter-row {
         row-gap: 24px;
       }
@@ -445,9 +443,11 @@ body {
       color: #00b96b;
       background-color: #e1faeb;
     }
+
     .ant-segmented-thumb-motion {
       background-color: #e1faeb;
     }
+
     .ant-segmented-item-icon + * {
       margin-inline-start: 2px;
       margin-inline-end: 6px;
@@ -459,6 +459,7 @@ body {
     .ant-pro-field-checkbox-vertical .ant-checkbox-group-item {
       margin-block-end: 8px;
     }
+
     .custom-edittable .ant-pro-card .ant-pro-card-body {
       padding-inline: 0;
     }
@@ -470,6 +471,7 @@ body {
       padding-inline: 0;
       padding-block: 0;
     }
+
     .ant-table-wrapper .ant-table-pagination.ant-pagination {
       margin: 16px;
     }
@@ -496,10 +498,12 @@ body {
       border-top-left-radius: 6px;
       border-top-right-radius: 6px;
     }
+
     .ql-container {
       border-bottom-right-radius: 6px;
       border-bottom-left-radius: 6px;
     }
+
     .ql-editor {
       min-height: 120px;
     }
@@ -508,8 +512,10 @@ body {
   // Custom Space Style====
   .custom-space-average {
     width: 100%;
+
     .ant-space-item {
       flex: 1;
+
       .ant-alert-description {
         word-break: break-all;
       }
@@ -526,11 +532,14 @@ body {
     .ant-list-vertical .ant-list-item .ant-list-item-meta {
       margin-block-end: 0;
     }
+
     .ant-list-vertical .ant-list-item .ant-list-item-meta .ant-list-item-meta-title {
       margin-block: 0;
     }
+
     .ant-pro-list-row-content {
       margin-inline: 0;
+
       p {
         margin-block-start: 0.5em;
         margin-block-end: 0;
@@ -550,10 +559,12 @@ body {
     .ant-pro-table-extra {
       margin-block-end: 0;
     }
+
     .ant-pro-card {
       border-radius: 0;
     }
   }
+
   // Custom checkbox Style====
   .custom-checkboxgroup {
     .ant-pro-field-checkbox-horizontal {
@@ -566,12 +577,14 @@ body {
     div::-webkit-scrollbar {
       width: 10px;
     }
+
     div::-webkit-scrollbar-thumb {
       /*滚动条里面小方块*/
       background: #535353;
       border-radius: 10px;
       -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
     }
+
     div::-webkit-scrollbar-track {
       /*滚动条里面轨道*/
       background: #ededed;
@@ -603,7 +616,7 @@ body {
   }
 
   // Fix
-  .ant-pro-card-statistic-content .ant-statistic-content-value-int{
+  .ant-pro-card-statistic-content .ant-statistic-content-value-int {
     font-size: unset;
   }
 }
